# cpace-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cpace/: __init__.py
tests/: test_cpace.py
